# WantedLab

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
wantedlab/: asgi.py  fastapi.py  settings.py  urls.py  wsgi.py
wantedlab/company/: admin.py  apps.py  models.py  routers.py  schemas.py  views.py
wantedlab/company/migrations/: 0001_initial.py
wantedlab/company/tests/: test_routers.py  test_views.py
